Mise à jour du contenu HTML

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <nav>
       <a href="#projects">Projets</a>
       <a href="CV_AbdelNacer_SAYAH.pdf" target="_blank">CV</a>
-      <a href="https://github.com/TonGithub" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/TonLinkedIn" target="_blank">LinkedIn</a>
+      <a href="https://github.com/as-data" target="_blank">GitHub</a>
+      <a href="https://linkedin.com/in/abdelnacersayah" target="_blank">LinkedIn</a>
     </nav>
   </header>
 
