Mise à jour du HTML avec stats et démo TikTok

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <a href="#projects">Projets</a>
       <a href="CV_AbdelNacer_SAYAH.pdf" target="_blank">CV</a>
       <a href="https://github.com/as-data" target="_blank">GitHub</a>
-      <a href="https://linkedin.com/in/abdelnacersayah" target="_blank">LinkedIn</a>
+      <a href="https://linkedin.com/in/TonLinkedIn" target="_blank">LinkedIn</a>
     </nav>
   </header>
 
@@ -31,11 +31,13 @@
       <strong>Objectif :</strong> Analyser automatiquement des vidéos d'un chat pour extraire les moments clés en clips où il joue, dort, mange, miaule ou interagit avec l'humain.
     </p>
     <ul>
-      <li>🧐 Utilisation de <strong>CLIP</strong> (OpenAI) pour classifier les comportements image par image</li>
+      <li>🤮 Utilisation de <strong>CLIP</strong> (OpenAI, publié en janvier 2021) pour classifier les comportements image par image</li>
       <li>✂️ Découpage automatique en clips vidéo par comportement</li>
-      <li>🗂️ Tri des clips dans des dossiers nommés selon l'activité</li>
-      <li>⚖️ Intégration de ffmpeg, OpenCV et Jupyter Notebook</li>
+      <li>🗂️ Tri automatique des clips dans des dossiers nommés selon l'activité détectée</li>
+      <li>📊 358 vidéos analysées → 1157 clips générés (durée moyenne : 3,0 sec)</li>
+      <li>⚖️ Intégration de ffmpeg, OpenCV, Jupyter Notebook et Python</li>
     </ul>
+    <p>🎥 <strong>Démonstration TikTok :</strong> <a href="https://vm.tiktok.com/ZNdY5CoNp/" target="_blank">Voir la vidéo</a></p>
     <p><a href="https://github.com/as-data/chat_clip_classifier" target="_blank">Voir le projet sur GitHub</a></p>
   </section>
 
