--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <strong>Objectif :</strong> Analyser automatiquement des vidéos d'un chat pour extraire les moments clés en clips où il joue, dort, mange, miaule ou interagit avec l'humain.
     </p>
     <ul>
-      <li>🤮 Utilisation de <strong>CLIP</strong> (OpenAI, publié en janvier 2021) pour classifier les comportements image par image</li>
+      <li>🧠 Utilisation de <strong>CLIP</strong> (OpenAI, publié en janvier 2021) pour classifier les comportements image par image</li>
       <li>✂️ Découpage automatique en clips vidéo par comportement</li>
       <li>🗂️ Tri automatique des clips dans des dossiers nommés selon l'activité détectée</li>
       <li>📊 358 vidéos analysées → 1157 clips générés (durée moyenne : 3,0 sec)</li>
