--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <li>📊 358 vidéos analysées → 1157 clips générés (durée moyenne : 3,0 sec)</li>
       <li>⚖️ Intégration de ffmpeg, OpenCV, Jupyter Notebook et Python</li>
     </ul>
-    <p>🎥 <strong>Démonstration TikTok :</strong> <a href="https://vm.tiktok.com/ZNdY5CoNp/" target="_blank">Voir la vidéo</a></p>
+    <p>🎥 <strong>Démonstration d'une vidéo TikTok montée avec les clips générés :</strong> <a href="https://vm.tiktok.com/ZNdY5CoNp/" target="_blank">Voir la vidéo</a></p>
     <p><a href="https://github.com/as-data/chat_clip_classifier" target="_blank">Voir le projet sur GitHub</a></p>
   </section>
 
