--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul>
       <li>🧠 Utilisation de <strong>CLIP</strong> (OpenAI, publié en janvier 2021) pour classifier les comportements image par image</li>
       <li>✂️ Découpage automatique en clips vidéo par comportement</li>
-      <li>🗂️ Tri automatique des clips dans des dossiers nommés selon l'activité détectée</li>
+      <li>🗂️ Tri automatique des clips dans 12 dossiers nommés selon l'activité détectée (jeu, sommeil, repas, miaulement, interaction avec un humain…)</li>
       <li>📊 358 vidéos analysées → 1157 clips générés (durée moyenne : 3,0 sec)</li>
       <li>⚖️ Intégration de ffmpeg, OpenCV, Jupyter Notebook et Python</li>
     </ul>
